# xplane-plugin

./: .gitignore  AircraftManager.cpp  AircraftManager.h  CMakeLists.txt  CONTRIBUTING.md  Config.cpp  Config.h  Constants.h  FrameRateMonitor.cpp  FrameRateMonitor.h  InterpolatedState.h  NearbyATCWindow.cpp  NearbyATCWindow.h  NetworkAircraft.cpp  NetworkAircraft.h  NetworkAircraftConfig.cpp  NetworkAircraftConfig.h  NotificationPanel.cpp  NotificationPanel.h  Plugin.cpp  Plugin.h  PreferencesWindow.cpp  PreferencesWindow.h  README.md  TerrainProbe.cpp  TerrainProbe.h  TextMessageConsole.cpp  TextMessageConsole.h  Utilities.h  XPImgWindow.h  XPilot.cpp  XPilot.h  conanfile.txt  xPilot Plugin.sln  xPilot Plugin.vcxproj  xPilot Plugin.vcxproj.filters
.github/workflows/: build.yml
Lib/: json.hpp
Lib/ImGui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_freetype.cpp  imgui_freetype.h  imgui_internal.h  imgui_widgets.cpp
Lib/ImgWindow/: ImgWindow.cpp  ImgWindow.h  SystemGL.h  XPImgWindow.cpp  XPImgWindow.h
Lib/XPMP2/: XPMP2.lib  XPMPMultiplayer.h
Lib/ZMQ/: zlib.lib  zmq.hpp
include/: AircraftManager.h  Base64.hpp  Config.h  Constants.h  NearbyATCWindow.h  NetworkAircraft.h  NetworkAircraftConfig.h  NotificationPanel.h  Plugin.h  SettingsWindow.h  TerrainProbe.h  TextMessageConsole.h  Utilities.h  XPilot.h  XplaneCommand.h  mathc.h  quat.hpp  sha512.hh
protobuf/: Addplane.cs  Airplaneconfig.cs  AppConfig.pb.cc  AppConfig.pb.h  AppConfigDto.pb.cc  AppConfigDto.pb.h  AppMetadata.pb.cc  AppMetadata.pb.h  BroadcastMessageReceived.pb.cc  BroadcastMessageReceived.pb.h  ChangePlaneModel.pb.cc  ChangePlaneModel.pb.h  Changemodel.cs  Clearnearbycontrollers.cs  ClientEvent.pb.cc  ClientEvent.pb.h  CslValidation.pb.cc  CslValidation.pb.h  Cslvalidate.cs  DeletePlane.pb.cc  DeletePlane.pb.h  Envelope.pb.cc  Envelope.pb.h  FastPositionUpdate.pb.cc  FastPositionUpdate.pb.h  InfoMessagePosted.pb.cc  InfoMessagePosted.pb.h  MetarReceived.pb.cc  MetarReceived.pb.h  Nearbycontrollers.cs  Networkconnected.cs  Networkdisconnected.cs  NotePosted.pb.cc  NotePosted.pb.h  PerformDisconnect.pb.cc  PerformDisconnect.pb.h  PlaneAddedToSim.pb.cc  PlaneAddedToSim.pb.h  PlaneRemovedFromSim.pb.cc  PlaneRemovedFromSim.pb.h  (+104 more)
src/: AircraftManager.cpp  Config.cpp  FrameRateMonitor.cpp  NearbyATCWindow.cpp  NetworkAircraft.cpp  NetworkAircraftConfig.cpp  NotificationPanel.cpp  Plugin.cpp  PreferencesWindow.cpp  SettingsWindow.cpp  Stopwatch.cpp  TerrainProbe.cpp  TextMessageConsole.cpp  XPilot.cpp  mathc.c
